# users-python-client

./: README.md  pyproject.toml
src/dopt/: __init__.py  client.py  environment.py
src/dopt/core/: client_wrapper.py
src/dopt/errors/: __init__.py  bad_request_error.py  internal_server_error.py  unauthorized_error.py
src/dopt/resources/: __init__.py
src/dopt/resources/groups/: client.py
src/dopt/resources/users/: client.py
src/dopt/types/: __init__.py  bad_request_error_response_body.py  bad_request_error_response_body_code.py  identify_batch_request_body.py  identify_batch_request_body_item.py  identify_batch_request_body_item_groups_item.py  identify_batch_response_body.py  identify_request_body.py  identify_request_params.py  identify_segment_request_body.py  identify_segment_request_body_group.py  identify_segment_request_body_identify.py  identify_segment_request_body_identify_segment_request_body.py  identify_segment_response_body.py  identify_user_request_body_groups_item.py  internal_server_error_response_body.py  not_found_error_response_body.py  segment_common.py  segment_group.py  segment_identify.py  timeout_error_response_body.py  unauthorized_error_response_body.py
